fix(toast): fix alignment for persisting toasts

--- a/src/components/toast/Toast.module.scss
+++ b/src/components/toast/Toast.module.scss
@@ -27,6 +27,7 @@
 
   .dismissButton {
     height: 24px;
+    align-self: flex-start;
   }
 
   & svg {
